--- a/calculator/calculator/functional/templates/index.html
+++ b/calculator/calculator/functional/templates/index.html
@@ -22,10 +22,10 @@
     <label for="second-number">Second Number:</label>
     <input type="number" name="second_number" id="second-number" placeholder="Enter the second number" required>
     <br>
-    <input type="submit" name="operation" value="add">
-    <input type="submit" name="operation" value="subtract">
-    <input type="submit" name="operation" value="multiply">
-    <input type="submit" name="operation" value="divide">
+    <button type="submit" name="operation" value="add">
+    <button type="submit" name="operation" value="subtract">
+    <button type="submit" name="operation" value="multiply">
+    <button type="submit" name="operation" value="divide">
 </form>
 
     </body>
