--- a/polls/mysite/polls/templates/polls/index.html
+++ b/polls/mysite/polls/templates/polls/index.html
@@ -5,12 +5,18 @@
     <title></title>
   </head>
   <body>
-    <p><div class = "container_fluid">
-    
+  <style>
+
+div { text-align: center; font-size:40px;}
+ul { display: inline-block; text-align: left; }
+</style>
+  
+    <p style="font-size:100px"><div >
+    <h4>POLLS FOR ELECTION</h4>
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="{% url 'polls:detail' question.id %}/">{{ question.question_text }}</a></li>
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li><br>
     {% endfor %}
     </ul>
 {% else %}
