--- a/polls/mysite/polls/templates/polls/result.html
+++ b/polls/mysite/polls/templates/polls/result.html
@@ -1,3 +1,17 @@
+!<!DOCTYPE html>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        
+
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +21,11 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+        
+        
+    </body>
+</html>
+
+
+
+
